# markdown_parser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: 01_project_structure.md  02_data_types.md  03_continuation_rules.md  04_prescanner.md  04_scanned_line.md  05_spine_handler.md  06_inline_parser.md  07_tab_algorithm.md  08_data_flow.md  09_open_decisions.md  10_block_rules.md  11_link_reference_definitions.md  12_renderers.md  13_testing.md  commonmark_testing_spec.md  index.md  parser_spec.md
docs/legacy/: 01_project_structure.md  02_data_types.md  03_continuation_rules.md  04_prescanner.md  05_spine_handler.md  06_inline_parser.md  07_tab_algorithm.md  08_data_flow.md  09_open_decisions.md  10_block_rules.md  11_link_reference_definitions.md  commonmark_testing_spec.md  index.md
docs/mermaid/: deferred.md  flowchart-spec.md  rendering.md  status.md
docs/report/: ai-usage-report.tex
include/markdown_parser/: BlockNode.hpp  HandlerRegistry.hpp  HtmlRenderer.hpp  HtmlRendererDebug.hpp  HtmlRendererFactory.hpp  InlineNode.hpp  InlineParser.hpp  JsonRenderer.hpp  NodeVisitor.hpp  PreScanner.hpp  ScannedLine.hpp  SpineHandler.hpp  Types.hpp  block_rules.hpp  commonmark_constants.hpp  entities.hpp  parser.hpp  string_utils.hpp  unicode_fold.hpp
include/markdown_parser/core/: BlockNode.hpp  InlineNode.hpp  Types.hpp
include/markdown_parser/handlers/: HandlerRegistry.hpp
include/markdown_parser/parser/: InlineParser.hpp  SpineHandler.hpp  block_rules.hpp  commonmark_constants.hpp  parser.hpp
include/markdown_parser/renderer/: HtmlRenderer.hpp  HtmlRendererDebug.hpp  HtmlRendererFactory.hpp  JsonRenderer.hpp  renderer_concept.hpp
include/markdown_parser/utils/: entities.hpp
include/mermaid/: AstDump.hpp  FlowDb.hpp  FlowParse.hpp  Layout.hpp  Lexer.hpp  Lower.hpp  SvgRenderer.hpp  TextMeasure.hpp  Token.hpp
include/mermaid/ast/: FlowAst.hpp
markdown-utils/: generate-golden.mjs  package-lock.json  package.json
mermaid-utils/: .gitignore  README.md  extract.mjs  package-lock.json  package.json
prompts/: 01-mermaid-rendering-approach.md  02-fence-handlers-factory-singleton.md  03-namespace-unification.md  04-renderer-concept-and-templates.md  05-directory-restructure.md  06-mermaid-native-parsing-pivot.md  07-grammar-and-generator-design.md  08-lr1-generator-implementation.md  09-mermaid-ast-and-lowering.md  10-golden-verification-vs-mermaid.md  11-layout-sugiyama.md  12-wasm-integration-and-text-measurement.md  13-svg-shapes-and-layout-debugging.md  14-delivery-prep-and-test-structure.md  15-json-output-and-mdast-alignment.md  16-link-definitions-and-references.md  17-normalization-parser-vs-renderer.md  18-test-suite-refactor-and-docs.md  19-memory-ownership-and-leak-investigation.md  20-quadratic-bracket-path.md  21-recursive-destructor-and-nesting-caps.md  README.md
prompts/web/: 01-what-is-markdown-md.md  02-mermaid-diagram-handling-in-cmark-parser.md  03-smart-pointers-in-cpp.md  04-cpp-project-structure-and-file-conventions.md  05-markdown-parser-architecture-and-component-design.md  06-markdown-to-html-and-json-specification.md  07-github-workflows-and-automated-testing.md  08-html-rendering-rules-for-list-items.md  09-deploying-cpp-parser-to-web.md  10-commonmark-block-quote-code-parsing.md  11-markdown-blockquote-indentation-spacing.md  12-hosting-a-parser-on-github-pages.md  13-mermaid-block-types.md
src/: HandlerRegistry.cpp  HtmlRenderDebug.cpp  HtmlRenderer.cpp  HtmlRendererFactory.cpp  InlineParser.cpp  JsonRenderer.cpp  PreScanner.cpp  ScannedLine.cpp  SpineHandler.cpp  block_rules.cpp  entities.cpp  main.cpp  string_utils.cpp  unicode_fold.cpp  wasm_bindings.cpp
src/handlers/: MathHandler.cpp  MermaidHandler.cpp
src/markdown_parser/handlers/: HandlerRegistry.cpp  MathHandler.cpp  MermaidHandler.cpp  MermaidJsHandler.cpp
src/markdown_parser/parser/: InlineParser.cpp  ScannedLine.cpp  SpineHandler.cpp  block_rules.cpp
src/markdown_parser/renderer/: HtmlRenderDebug.cpp  HtmlRenderer.cpp  HtmlRendererFactory.cpp  JsonRenderer.cpp
src/markdown_parser/utils/: entities.cpp  string_utils.cpp  unicode_fold.cpp
src/mermaid/: AstDump.cpp  BrowserMeasure.cpp  FlowParse.cpp  Layout.cpp  Lexer.cpp  Lower.cpp  SvgRenderer.cpp  TextMeasure.cpp  cli_ast.cpp  cli_svg.cpp  flowchart.grammar
tests/: CMakeLists.txt  test_inline.cpp  test_prescanner.cpp  test_spec.cpp  test_spine.cpp
tests/markdown/: case_report.hpp  test_commonmark_spec.cpp  test_json_mdast.cpp
tests/mermaid/: flow_fixture.hpp  test_flow_ast.cpp  test_lexer.cpp  test_lower.cpp  test_parse.cpp
tests/spec_tests/: CMakeLists.txt  commonmark_spec_case.hpp  test_commonmark_spec.cpp
tests/test-files/: failing-tests-report.md  long_file.md  simple-test.md
tests/test-files/markdown/: commonmark_spec_mdast.json
tests/test-files/mermaid/: f01_directions.ast.json  f01_directions.mmd  f02_shapes.ast.json  f02_shapes.mmd  f03_labels.ast.json  f03_labels.mmd  f04_edges.ast.json  f04_edges.mmd  f04b_chainlabels.ast.json  f04b_chainlabels.mmd  f05_length.ast.json  f05_length.mmd  f06_chaining.ast.json  f06_chaining.mmd  f07_subgraphs.ast.json  f07_subgraphs.mmd  f07b_nested.ast.json  f07b_nested.mmd  f08_style.ast.json  f08_style.mmd  f09_class.ast.json  f09_class.mmd  f10_linkstyle.ast.json  f10_linkstyle.mmd  f14_comments.ast.json  f14_comments.mmd  f18_composite.ast.json  f18_composite.mmd  f19_pipeline.ast.json  f19_pipeline.mmd  simple-mermaid.ast.json  simple-mermaid.mmd
tools/lrgen/: CMakeLists.txt  Emitter.cpp  Emitter.hpp  GrammarParser.cpp  GrammarParser.hpp  GrammarSpec.hpp  Lr.cpp  Lr.hpp  main.cpp
web/: index.html  style.css
